Presets/Defaults storage/logic - code complete.

--- a/src/IressPro.Packager/appsettings.json
+++ b/src/IressPro.Packager/appsettings.json
@@ -1,6 +1,14 @@
 ﻿{
   "Defaults": {
-    "Toronto": {
+    "AUS": {
+      "AuxSrcFolder": "C:\\CompiledBinaries\\Registries\\",
+      "IosSrcFolder": "C:\\CompiledBinaries\\IOS\\",
+      "IpsSrcFolder": "C:\\CompiledBinaries\\IPS\\",
+      "IrsSrcFolder": "C:\\CompiledBinaries\\IRESS\\",
+      "RtlSrcFolder": "C:\\CompiledBinaries\\Retail\\",
+      "SlfSrcFolder": "C:\\CompiledBinaries\\SelfContained\\"
+    },
+    "CAN": {
       "AuxSrcFolder": "F:\\Jagriti\\Panther\\Versions\\Registries\\",
       "IosSrcFolder": "Y:\\Release Candidates\\IOS Plus\\Client\\",
       "IpsSrcFolder": "Y:\\Release Candidates\\Source\\IPS\\",
@@ -8,7 +16,7 @@
       "RtlSrcFolder": "Y:\\Release Candidates\\IOS Plus Retail\\Client\\Neo\\",
       "SlfSrcFolder": "F:\\Jagriti\\Panther\\Versions\\Self Contained\\"
     },
-    "Office2": {
+    "NZL": {
       "AuxSrcFolder": "C:\\CompiledBinaries\\Registries\\",
       "IosSrcFolder": "C:\\CompiledBinaries\\IOS\\",
       "IpsSrcFolder": "C:\\CompiledBinaries\\IPS\\",
@@ -16,7 +24,7 @@
       "RtlSrcFolder": "C:\\CompiledBinaries\\Retail\\",
       "SlfSrcFolder": "C:\\CompiledBinaries\\SelfContained\\"
     },
-    "Office3": {
+    "SGP": {
       "AuxSrcFolder": "C:\\CompiledBinaries\\Registries\\",
       "IosSrcFolder": "C:\\CompiledBinaries\\IOS\\",
       "IpsSrcFolder": "C:\\CompiledBinaries\\IPS\\",
@@ -24,7 +32,15 @@
       "RtlSrcFolder": "C:\\CompiledBinaries\\Retail\\",
       "SlfSrcFolder": "C:\\CompiledBinaries\\SelfContained\\"
     },
-    "Office4": {
+    "RSA": {
+      "AuxSrcFolder": "C:\\CompiledBinaries\\Registries\\",
+      "IosSrcFolder": "C:\\CompiledBinaries\\IOS\\",
+      "IpsSrcFolder": "C:\\CompiledBinaries\\IPS\\",
+      "IrsSrcFolder": "C:\\CompiledBinaries\\IRESS\\",
+      "RtlSrcFolder": "C:\\CompiledBinaries\\Retail\\",
+      "SlfSrcFolder": "C:\\CompiledBinaries\\SelfContained\\"
+    },
+    "GBR": {
       "AuxSrcFolder": "C:\\CompiledBinaries\\Registries\\",
       "IosSrcFolder": "C:\\CompiledBinaries\\IOS\\",
       "IpsSrcFolder": "C:\\CompiledBinaries\\IPS\\",
