add defaults and fix typo

--- a/src/IressPro.Packager/appsettings.json
+++ b/src/IressPro.Packager/appsettings.json
@@ -1,12 +1,12 @@
 ﻿{
   "Defaults": {
     "AUS": {
-      "AuxSrcFolder": "C:\\CompiledBinaries\\Registries\\",
-      "IosSrcFolder": "C:\\CompiledBinaries\\IOS\\",
-      "IpsSrcFolder": "C:\\CompiledBinaries\\IPS\\",
-      "IrsSrcFolder": "C:\\CompiledBinaries\\IRESS\\",
-      "RtlSrcFolder": "C:\\CompiledBinaries\\Retail\\",
-      "SlfSrcFolder": "C:\\CompiledBinaries\\SelfContained\\"
+      "AuxSrcFolder": "Y:\\iress\\client\\Packager\\Registries",
+      "IosSrcFolder": "Y:\\IOS Plus\\Client\\Neo\\",
+      "IpsSrcFolder": "Y:\\Ips\\client\\Neo\\",
+      "IrsSrcFolder": "Y:\\iress\\client\\Neo\\",
+      "RtlSrcFolder": "Y:\\IOS Plus Retail\\Client\\Neo\\",
+      "SlfSrcFolder": "Y:\\iress\\client\\Packager\\Self Contained\\"
     },
     "CAN": {
       "AuxSrcFolder": "F:\\Jagriti\\Panther\\Versions\\Registries\\",
@@ -25,12 +25,12 @@
       "SlfSrcFolder": "C:\\CompiledBinaries\\SelfContained\\"
     },
     "SGP": {
-      "AuxSrcFolder": "C:\\CompiledBinaries\\Registries\\",
-      "IosSrcFolder": "C:\\CompiledBinaries\\IOS\\",
-      "IpsSrcFolder": "C:\\CompiledBinaries\\IPS\\",
-      "IrsSrcFolder": "C:\\CompiledBinaries\\IRESS\\",
-      "RtlSrcFolder": "C:\\CompiledBinaries\\Retail\\",
-      "SlfSrcFolder": "C:\\CompiledBinaries\\SelfContained\\"
+      "AuxSrcFolder": "Y:\\iress\\client\\Packager\\Registries",
+      "IosSrcFolder": "Y:\\IOS Plus\\Client\\Neo\\",
+      "IpsSrcFolder": "Y:\\Ips\\client\\Neo\\",
+      "IrsSrcFolder": "Y:\\iress\\client\\Neo\\",
+      "RtlSrcFolder": "Y:\\IOS Plus Retail\\Client\\Neo\\",
+      "SlfSrcFolder": "Y:\\iress\\client\\Packager\\Self Contained\\"
     },
     "RSA": {
       "AuxSrcFolder": "C:\\CompiledBinaries\\Registries\\",
