--- a/src/IressPro.Packager/appsettings.json
+++ b/src/IressPro.Packager/appsettings.json
@@ -47,6 +47,14 @@
       "IrsSrcFolder": "C:\\CompiledBinaries\\IRESS\\",
       "RtlSrcFolder": "C:\\CompiledBinaries\\Retail\\",
       "SlfSrcFolder": "C:\\CompiledBinaries\\SelfContained\\"
+    },
+    "EXP": {
+      "AuxSrcFolder": "F:\\Jagriti\\Panther\\Versions\\Registries\\",
+      "IosSrcFolder": "F:\\Jagriti\\Panther\\Versions\\Self Contained\\20.1.3\\2\\",
+      "IpsSrcFolder": "F:\\Jagriti\\Panther\\Versions\\Self Contained\\20.1.3\\4\\",
+      "IrsSrcFolder": "F:\\Jagriti\\Panther\\Versions\\Self Contained\\20.1.3\\1\\",
+      "RtlSrcFolder": "F:\\Jagriti\\Panther\\Versions\\Self Contained\\20.1.3\\3\\",
+      "SlfSrcFolder": "F:\\Jagriti\\Panther\\Versions\\Self Contained\\20.1.3\\5\\"
     }
   },
   "Serilog": {
