--- a/src/IressPro.Packager/appsettings.json
+++ b/src/IressPro.Packager/appsettings.json
@@ -9,12 +9,12 @@
       "SlfSrcFolder": "Y:\\iress\\client\\Packager\\Self Contained\\"
     },
     "CAN": {
-      "AuxSrcFolder": "F:\\Jagriti\\Panther\\Versions\\Registries\\",
-      "IosSrcFolder": "Y:\\Release Candidates\\IOS Plus\\Client\\",
-      "IpsSrcFolder": "Y:\\Release Candidates\\Source\\IPS\\",
-      "IrsSrcFolder": "Y:\\Release Candidates\\Client\\IRESS\\",
-      "RtlSrcFolder": "Y:\\Release Candidates\\IOS Plus Retail\\Client\\Neo\\",
-      "SlfSrcFolder": "F:\\Jagriti\\Panther\\Versions\\Self Contained\\"
+      "AuxSrcFolder": "F:\\Jagriti\\Panther\\Versions\\Registries\\", // an ongoing attempt to pack registry files.
+      "IosSrcFolder": "Y:\\Release Candidates\\IOS Plus\\Client\\", //             SETUP.EXE is always available.
+      "IpsSrcFolder": "Y:\\Release Candidates\\Source\\IPS\\", //                  SETUP.EXE ... a single old (2016) instance.
+      "IrsSrcFolder": "Y:\\Release Candidates\\Client\\IRESS\\", //                SETUP.EXE is always available.
+      "RtlSrcFolder": "Y:\\Release Candidates\\IOS Plus Retail\\Client\\Neo\\", // SETUP.EXE is always available.
+      "SlfSrcFolder": "F:\\Jagriti\\Panther\\Versions\\Self Contained\\" // an ongoing attempt to have all in one place.      
     },
     "NZL": {
       "AuxSrcFolder": "C:\\CompiledBinaries\\Registries\\",
@@ -55,6 +55,14 @@
       "IrsSrcFolder": "F:\\Jagriti\\Panther\\Versions\\Self Contained\\20.1.3\\1\\",
       "RtlSrcFolder": "F:\\Jagriti\\Panther\\Versions\\Self Contained\\20.1.3\\3\\",
       "SlfSrcFolder": "F:\\Jagriti\\Panther\\Versions\\Self Contained\\20.1.3\\5\\"
+    },
+    "DEV": {
+      "AuxSrcFolder": "C:\\Packager.Sources\\aux\\",
+      "IosSrcFolder": "C:\\Packager.Sources\\Ios\\",
+      "IpsSrcFolder": "C:\\Packager.Sources\\Ips\\",
+      "IrsSrcFolder": "C:\\Packager.Sources\\Irs\\",
+      "RtlSrcFolder": "C:\\Packager.Sources\\Rtl\\",
+      "SlfSrcFolder": "C:\\Packager.Sources\\Slf\\"
     }
   },
   "Serilog": {
