More progrss on pushoing forward with the Self-Contained mode.

--- a/src/IressPro.Packager/appsettings.json
+++ b/src/IressPro.Packager/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "Defaults": {
     "AUS": {
-      "AuxSrcFolder": "Y:\\iress\\client\\Packager\\Registries",
+      "RegSrcFolder": "Y:\\iress\\client\\Packager\\Registries",
       "IosSrcFolder": "Y:\\IOS Plus\\Client\\Neo\\",
       "IpsSrcFolder": "Y:\\Ips\\client\\Neo\\",
       "IrsSrcFolder": "Y:\\iress\\client\\Neo\\",
@@ -9,7 +9,7 @@
       "SlfSrcFolder": "Y:\\iress\\client\\Packager\\Self Contained\\"
     },
     "CAN": {
-      "AuxSrcFolder": "F:\\Jagriti\\Panther\\Versions\\Registries\\", // an ongoing attempt to pack registry files.
+      "RegSrcFolder": "F:\\Jagriti\\Panther\\Versions\\Registries\\", // an ongoing attempt to pack registry files.
       "IosSrcFolder": "Y:\\Release Candidates\\IOS Plus\\Client\\", //             SETUP.EXE is always available.
       "IpsSrcFolder": "Y:\\Release Candidates\\Source\\IPS\\", //                  SETUP.EXE ... a single old (2016) instance.
       "IrsSrcFolder": "Y:\\Release Candidates\\Client\\IRESS\\", //                SETUP.EXE is always available.
@@ -17,7 +17,7 @@
       "SlfSrcFolder": "F:\\Jagriti\\Panther\\Versions\\Self Contained\\" // an ongoing attempt to have all in one place.      
     },
     "NZL": {
-      "AuxSrcFolder": "C:\\CompiledBinaries\\Registries\\",
+      "RegSrcFolder": "C:\\CompiledBinaries\\Registries\\",
       "IosSrcFolder": "C:\\CompiledBinaries\\IOS\\",
       "IpsSrcFolder": "C:\\CompiledBinaries\\IPS\\",
       "IrsSrcFolder": "C:\\CompiledBinaries\\IRESS\\",
@@ -25,7 +25,7 @@
       "SlfSrcFolder": "C:\\CompiledBinaries\\SelfContained\\"
     },
     "SGP": {
-      "AuxSrcFolder": "Y:\\iress\\client\\Packager\\Registries",
+      "RegSrcFolder": "Y:\\iress\\client\\Packager\\Registries",
       "IosSrcFolder": "Y:\\IOS Plus\\Client\\Neo\\",
       "IpsSrcFolder": "Y:\\Ips\\client\\Neo\\",
       "IrsSrcFolder": "Y:\\iress\\client\\Neo\\",
@@ -33,7 +33,7 @@
       "SlfSrcFolder": "Y:\\iress\\client\\Packager\\Self Contained\\"
     },
     "RSA": {
-      "AuxSrcFolder": "C:\\CompiledBinaries\\Registries\\",
+      "RegSrcFolder": "C:\\CompiledBinaries\\Registries\\",
       "IosSrcFolder": "C:\\CompiledBinaries\\IOS\\",
       "IpsSrcFolder": "C:\\CompiledBinaries\\IPS\\",
       "IrsSrcFolder": "C:\\CompiledBinaries\\IRESS\\",
@@ -41,7 +41,7 @@
       "SlfSrcFolder": "C:\\CompiledBinaries\\SelfContained\\"
     },
     "GBR": {
-      "AuxSrcFolder": "C:\\CompiledBinaries\\Registries\\",
+      "RegSrcFolder": "C:\\CompiledBinaries\\Registries\\",
       "IosSrcFolder": "C:\\CompiledBinaries\\IOS\\",
       "IpsSrcFolder": "C:\\CompiledBinaries\\IPS\\",
       "IrsSrcFolder": "C:\\CompiledBinaries\\IRESS\\",
@@ -49,7 +49,7 @@
       "SlfSrcFolder": "C:\\CompiledBinaries\\SelfContained\\"
     },
     "EXP": {
-      "AuxSrcFolder": "F:\\Jagriti\\Panther\\Versions\\Registries\\",
+      "RegSrcFolder": "F:\\Jagriti\\Panther\\Versions\\Registries\\",
       "IosSrcFolder": "F:\\Jagriti\\Panther\\Versions\\Self Contained\\20.1.3\\2\\",
       "IpsSrcFolder": "F:\\Jagriti\\Panther\\Versions\\Self Contained\\20.1.3\\4\\",
       "IrsSrcFolder": "F:\\Jagriti\\Panther\\Versions\\Self Contained\\20.1.3\\1\\",
@@ -57,7 +57,7 @@
       "SlfSrcFolder": "F:\\Jagriti\\Panther\\Versions\\Self Contained\\20.1.3\\5\\"
     },
     "DEV": {
-      "AuxSrcFolder": "C:\\Packager.Sources\\aux\\",
+      "RegSrcFolder": "C:\\Packager.Sources\\Reg\\",
       "IosSrcFolder": "C:\\Packager.Sources\\Ios\\",
       "IpsSrcFolder": "C:\\Packager.Sources\\Ips\\",
       "IrsSrcFolder": "C:\\Packager.Sources\\Irs\\",
