--- a/src/Iress.Sys/Iress.Sys.csproj
+++ b/src/Iress.Sys/Iress.Sys.csproj
@@ -16,7 +16,7 @@
 
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DefineConstants>BeeperIsOn</DefineConstants>
+    <DefineConstants>TRACE;BeeperIsOn</DefineConstants>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="3.0.0">
