--- a/src/Iress.WPF/Iress.WPF.csproj
+++ b/src/Iress.WPF/Iress.WPF.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup Label="Globals">
     <SccProjectName>SAK</SccProjectName>
     <SccProvider>SAK</SccProvider>
@@ -8,14 +8,18 @@
   </PropertyGroup>
   <PropertyGroup>
     <!--<OutputType>WinExe</OutputType>-->
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0-windows</TargetFramework>
     <UseWPF>true</UseWPF>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>aavwpf.snk</AssemblyOriginatorKeyFile>
 
-    <LangVersion>8.0</LangVersion>
+    
     <Nullable>enable</Nullable>
 
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DebugType>none</DebugType>
+    <DebugSymbols>false</DebugSymbols>
   </PropertyGroup>
   <ItemGroup>
     <None Remove="Assets\error.gif" />
