--- a/src/IressPro.Packager/IressPro.Packager.csproj
+++ b/src/IressPro.Packager/IressPro.Packager.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0-windows</TargetFramework>
     <UseWPF>true</UseWPF>
     <ApplicationIcon>shapes.ico</ApplicationIcon>
     <LangVersion>8.0</LangVersion>
