Adjusted to fit the requirements of the new installer on GitHub.
note:
appsettings.json has been changed to appsettings.Pkg.json and 'moved' to ~AppData.

--- a/src/IressPro.Packager/IressPro.Packager.csproj
+++ b/src/IressPro.Packager/IressPro.Packager.csproj
@@ -74,7 +74,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <None Update="appsettings.json">
+    <None Update="appsettings.Pkg.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="Properties\Settings.settings">
