self-init-healing appsettings.Pkg.json

--- a/src/Iress.WPF/Iress.WPF.csproj
+++ b/src/Iress.WPF/Iress.WPF.csproj
@@ -16,6 +16,9 @@
     
     <Nullable>enable</Nullable>
 
+    
+    <UserSecretsId>f4068cd8-ddfa-47f8-8a94-b4edf54c0b09</UserSecretsId>
+
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <DebugType>none</DebugType>
@@ -29,6 +32,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="3.1.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
   </ItemGroup>
