--- a/src/IressPro.Packager/appsettings.Pkg.json
+++ b/src/IressPro.Packager/appsettings.Pkg.json
@@ -1,4 +1,5 @@
 ﻿{
+  "WhereAmI": "C:\\ProgramData\\appsettings.Pkg.json",
   "Defaults": {
     "AUS": {
       "RegSrcFolder": "Y:\\iress\\client\\Packager\\Registries",
